crates/codegen/src/rust/tests/snapshots/tern_codegen__rust__tests__snapshot_tests__snapshot_complex_types.snap
---
source: crates/codegen/src/rust/tests/snapshot_tests.rs
expression: "output.get(\"complex_table.rs\").unwrap()"
---
//! SeaORM entity for `complex_table` table.
//!
//! Generated by Tern.

use chrono::{DateTime, FixedOffset, NaiveDateTime};
use rust_decimal::Decimal;
use sea_orm::entity::prelude::*;
use serde_json::Value;
use uuid::Uuid;

#[derive(Clone, Debug, PartialEq, Eq, DeriveEntityModel)]
#[sea_orm(table_name = "complex_table")]
pub struct Model {
    #[sea_orm(primary_key)]
    pub id: i32,
    pub uuid_col: uuid::Uuid,
    #[sea_orm(column_type = "TimestampWithTimeZone")]
    pub created_at: chrono::DateTime<chrono::FixedOffset>,
    pub updated_at: Option<chrono::NaiveDateTime>,
    #[sea_orm(column_type = "JsonBinary", nullable)]
    pub metadata: Option<serde_json::Value>,
    pub price: rust_decimal::Decimal,
    pub is_active: bool,
}

#[derive(Copy, Clone, Debug, EnumIter, DeriveRelation)]
pub enum Relation {}

impl ActiveModelBehavior for ActiveModel {}
