crates/codegen/src/rust/tests/snapshots/tern_codegen__rust__tests__snapshot_tests__snapshot_mod_file.snap
---
source: crates/codegen/src/rust/tests/snapshot_tests.rs
expression: "output.get(\"mod.rs\").unwrap()"
---
//! SeaORM entity definitions generated by Tern.
//!
//! This file was automatically generated. Do not edit manually.

pub mod prelude;

pub mod user;
pub mod post;
