crates/codegen/src/rust/tests/snapshots/tern_codegen__rust__tests__snapshot_tests__user_with_relations.snap
---
source: crates/codegen/src/rust/tests/snapshot_tests.rs
expression: "output.get(\"user.rs\").unwrap()"
---
//! SeaORM entity for `users` table.
//!
//! Generated by Tern.

use sea_orm::entity::prelude::*;

#[derive(Clone, Debug, PartialEq, Eq, DeriveEntityModel)]
#[sea_orm(table_name = "users")]
pub struct Model {
    #[sea_orm(primary_key)]
    pub id: i32,
    pub name: String,
}

#[derive(Copy, Clone, Debug, EnumIter, DeriveRelation)]
pub enum Relation {
    #[sea_orm(has_many = "super::post::Entity")]
    Posts,
}

impl Related<super::post::Entity> for Entity {
    fn to() -> RelationDef {
        Relation::Posts.def()
    }
}

impl ActiveModelBehavior for ActiveModel {}
